All imports refactored and gradle build error when testing fixed.